Add 3.4.2 release notes. By Joe Buck <Joe.Buck@synopsys.COM>.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -657,7 +657,7 @@ and not your code, that is broken.</em></p>
            (<code>@synchronized</code>) support.  These are accessible via
            the <code>-fobjc-exceptions</code> switch; as of this writing,
            they may only be used in conjunction with <code>-fnext-runtime
-           </code> on Mac OS X 10.3 and later. See <a href=
+           </code> on Mac OS X 10.3 and later. See <a href=""
            "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
@@ -670,14 +670,14 @@ and not your code, that is broken.</em></p>
            and that correct diagnostics are issued.</li>
        <li>Support for "Zero-Link" (<code>-fzero-link</code>) and
            "Fix-and-Continue" (<code>-freplace-objc-classes</code>) debugging
-           modes, currently available on Mac OS X 10.3 and later. See <a href=
+           modes, currently available on Mac OS X 10.3 and later. See <a href=""
            "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
        <li>Access to optimized runtime entry points (<code>-fno-nil-receivers
            </code>) on the assumption that message receivers are never <code>
            nil</code>.  This is currently available on Mac OS X 10.3 and
-           later. See <a href=
+           later. See <a href=""
            "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
@@ -1388,6 +1388,158 @@ here).</p>
 <li><a href="http://gcc.gnu.org/PR14150">14150</a> Ada documentation out of date</li>
 <li><a href="http://gcc.gnu.org/PR14949">14949</a> (c++) Need to document method visibility changes</li>
 <li><a href="http://gcc.gnu.org/PR15123">15123</a> libstdc++<code>-doc</code>: Allocators.3 manpage is empty</li>
+</ul>
+
+<hr />
+<h2><a name="3.4.2">GCC 3.4.2</a></h2>
+
+
+<h3>Bug Fixes</h3>
+
+<p>This section lists the problem reports (PRs) from GCC's bug tracking
+system that
+are known to be fixed in the 3.4.2 release. This list might not be complete
+(that is, it is possible that some PRs that have been fixed are not listed
+here).</p>
+
+<h4>Bootstrap failures and issues</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16469">16469</a> [mips-sgi-irix5.3] bootstrap fails in libstdc++<code>-v3</code>/testsuite</li>
+<li><a href="http://gcc.gnu.org/PR16344">16344</a> [hppa-linux-gnu] libstdc++'s PCH built by profiledbootstrap does not work with the built compiler</li>
+<li><a href="http://gcc.gnu.org/PR16842">16842</a> [Solaris/x86] mkheaders can not find <code>mkheaders.c</code>onf</li>
+</ul>
+<h4>Multi-platform internal compiler errors (ICEs)</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR12608">12608</a> (c++) ICE: expected class 't', have 'x' (error_mark) in cp_parser_class_specifier, in <code>cp/parser.c</code></li>
+<li><a href="http://gcc.gnu.org/PR14492">14492</a> ICE in <code>loc_descriptor_from_tree</code>, in <code>dwarf2out.c</code></li>
+<li><a href="http://gcc.gnu.org/PR15461">15461</a> (c++) ICE due to NRV and inlining</li>
+<li><a href="http://gcc.gnu.org/PR15890">15890</a> (c++) ICE in <code>c_expand_expr</code>, in <code>c-common.c</code></li>
+<li><a href="http://gcc.gnu.org/PR16180">16180</a> ICE: segmentation fault in RTL optimization</li>
+<li><a href="http://gcc.gnu.org/PR16224">16224</a> (c++) ICE in <code>write_unscoped_name</code> (template/namespace)</li>
+<li><a href="http://gcc.gnu.org/PR16408">16408</a> ICE: in <code>delete_insn</code>, in <code>cfgrtl.c</code></li>
+<li><a href="http://gcc.gnu.org/PR16529">16529</a> (c++) ICE for: namespace-alias shall not be declared as the name of any other entity</li>
+<li><a href="http://gcc.gnu.org/PR16698">16698</a> (c++) ICE with exceptions and declaration of <code>__cxa_throw</code></li>
+<li><a href="http://gcc.gnu.org/PR16706">16706</a> (c++) ICE in <code>finish_member_declaration</code>, in <code>cp/semantics.c</code></li>
+<li><a href="http://gcc.gnu.org/PR16810">16810</a> (c++) Legal C++ program with cast gives ICE in <code>build_ptrmemfunc</code></li>
+<li><a href="http://gcc.gnu.org/PR16851">16851</a> (c++) ICE when throwing a comma expression</li>
+<li><a href="http://gcc.gnu.org/PR16870">16870</a> (c++) Boost.Spirit causes ICE in <code>tsubst</code>, in <code>cp/pt.c</code></li>
+<li><a href="http://gcc.gnu.org/PR16904">16904</a> (c++) ICE in <code>finish_class_member_access_expr</code>, in <code>cp/typeck.c</code></li>
+<li><a href="http://gcc.gnu.org/PR16905">16905</a> (c++) ICE (segfault) with exceptions</li>
+<li><a href="http://gcc.gnu.org/PR16964">16964</a> (c++) ICE in <code>cp_parser_class_specifier</code> due to redefinition</li>
+<li><a href="http://gcc.gnu.org/PR17068">17068</a> (c++) ICE: tree check: expected class 'd', have 'x' (identifier_node) in <code>dependent_template_p</code>, in <code>cp/pt.c</code></li>
+</ul>
+<h4>Preprocessor bugs</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16366">16366</a> Preprocessor option <code>-remap</code> causes memory corruption</li>
+</ul>
+<h4>Optimization</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR15345">15345</a> unreferenced nested inline functions not optimized away</li>
+<li><a href="http://gcc.gnu.org/PR16590">16590</a> Incorrect execution when compiling with <code>-O2</code></li>
+<li><a href="http://gcc.gnu.org/PR16693">16693</a> Bitwise AND is lost when used within a cast to an <code>enum</code> of the same precision</li>
+<li><a href="http://gcc.gnu.org/PR17078">17078</a> Jump into <code>if(0)</code> substatement fails</li>
+</ul>
+<h4>Problems in generated debug information</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR13956">13956</a> incorrect stabs for nested local variables</li>
+</ul>
+<h4>C front end bugs</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16684">16684</a> GCC should not warn about redundant redeclarations of built-ins</li>
+</ul>
+<h4>C++ compiler and library</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR12658">12658</a> Thread safety problems in <code>locale::global()</code> and <code>locale::locale()</code></li>
+<li><a href="http://gcc.gnu.org/PR13092">13092</a> g++ accepts invalid pointer-to-member conversion</li>
+<li><a href="http://gcc.gnu.org/PR15320">15320</a> Excessive memory consumption</li>
+<li><a href="http://gcc.gnu.org/PR16246">16246</a> Incorrect template argument deduction</li>
+<li><a href="http://gcc.gnu.org/PR16273">16273</a> Memory exhausted when using nested classes and virtual functions</li>
+<li><a href="http://gcc.gnu.org/PR16401">16401</a> <code>ostringstream</code> in gcc 3.4.x very slow for big data</li>
+<li><a href="http://gcc.gnu.org/PR16411">16411</a> undefined reference to <code>__gnu_cxx::stdio_sync_filebuf&lt;char, std::char_traits&lt;char&gt; &gt;::file()</code></li>
+<li><a href="http://gcc.gnu.org/PR16489">16489</a> G++ incorrectly rejects use of a null constant integral expression as a null constant pointer</li>
+<li><a href="http://gcc.gnu.org/PR16618">16618</a> <code>offsetof</code> fails with constant member</li>
+<li><a href="http://gcc.gnu.org/PR16637">16637</a> syntax error reported for valid input code</li>
+<li><a href="http://gcc.gnu.org/PR16717">16717</a> <code>__attribute__((constructor))</code> broken in C++</li>
+<li><a href="http://gcc.gnu.org/PR16813">16813</a> compiler error in DEBUG version of range insertion <code>std::map::insert</code></li>
+<li><a href="http://gcc.gnu.org/PR16853">16853</a> pointer-to-member initialization from incompatible one accepted</li>
+<li><a href="http://gcc.gnu.org/PR16889">16889</a> ambiguity is not detected</li>
+<li><a href="http://gcc.gnu.org/PR16959">16959</a> Segmentation fault in <code>ios_base::sync_with_stdio</code></li>
+</ul>
+<h4>Java compiler and library</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR7587">7587</a> direct threaded interpreter not thread-safe</li>
+<li><a href="http://gcc.gnu.org/PR16473">16473</a> ServerSocket <code>accept()</code> leaks file descriptors</li>
+<li><a href="http://gcc.gnu.org/PR16478">16478</a> Hash synchronization deadlock with finalizers</li>
+</ul>
+<h4>Alpha-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR10695">10695</a> ICE in <code>dwarf2out_frame_debug_expr</code>, in <code>dwarf2out.c</code></li>
+<li><a href="http://gcc.gnu.org/PR16974">16974</a> could not split insn (ice in <code>final_scan_insn</code>, in <code>final.c</code>)</li>
+</ul>
+<h4>x86-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16298">16298</a> ICE in <code>output_operand</code></li>
+<li><a href="http://gcc.gnu.org/PR17113">17113</a> ICE with SSE2 intrinsics</li>
+<li><a href="http://gcc.gnu.org/PR17171">17171</a> [i386-aout] Unrecognized comments in generated asm</li>
+</ul>
+<h4>x86-64 specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR14697">14697</a> libstdc++ couldn't find 32bit libgcc_s</li>
+</ul>
+<h4>MIPS-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR15869">15869</a> [mips64] No NOP after LW (with <code>-mips1</code> <code>-O0</code>)</li>
+<li><a href="http://gcc.gnu.org/PR16325">16325</a> [mips64] value profiling clobbers gp on mips</li>
+<li><a href="http://gcc.gnu.org/PR16357">16357</a> [mipsisa64-elf] ICE copying 7 bytes between extern char[]s</li>
+<li><a href="http://gcc.gnu.org/PR16380">16380</a> [mips64] Use of uninitialised register after dbra conversion</li>
+<li><a href="http://gcc.gnu.org/PR16407">16407</a> [mips64] Unaligned access to local variables</li>
+<li><a href="http://gcc.gnu.org/PR16643">16643</a> [mips64] verify_local_live_at_start ICE after crossjumping &amp; cfgcleanup</li>
+</ul>
+<h4>ARM-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR15927">15927</a> THUMB <code>-O2</code>: strength-reduced iteration variable ends up off by 1</li>
+<li><a href="http://gcc.gnu.org/PR15948">15948</a> THUMB: ICE with non-commutative cbranch</li>
+<li><a href="http://gcc.gnu.org/PR17019">17019</a> THUMB: bad switch statement in md code for addsi3_cbranch_scratch</li>
+</ul>
+<h4>IA64-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16130">16130</a> ICE on valid code: in bundling, in <code>config/ia64/ia64.c</code> (<code>-mtune=merced</code>)</li>
+<li><a href="http://gcc.gnu.org/PR16142">16142</a> ICE on valid code: in bundling, in <code>config/ia64/ia64.c</code> (<code>-mtune=itanium</code>)</li>
+<li><a href="http://gcc.gnu.org/PR16278">16278</a> Gcc failed to build Linux kernel with <code>-mtune=merced</code></li>
+<li><a href="http://gcc.gnu.org/PR16414">16414</a> ICE on valid code: typo in comparison of <code>asm_noperands</code> result</li>
+<li><a href="http://gcc.gnu.org/PR16445">16445</a> ICE on valid code: don't count ignored insns</li>
+<li><a href="http://gcc.gnu.org/PR16490">16490</a> ICE (segfault) while compiling with <code>-fprofile-use</code></li>
+<li><a href="http://gcc.gnu.org/PR16683">16683</a> ia64 does not honor SUBTARGET_EXTRA_SPECS</li>
+</ul>
+<h4>PowerPC-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16195">16195</a> (ppc64): Miscompilation of GCC 3.3.x by 3.4.x</li>
+<li><a href="http://gcc.gnu.org/PR16239">16239</a> ICE on ppc64 (mozilla 1.7 compile, <code>-O1</code> <code>-fno-exceptions</code> issue)</li>
+</ul>
+<h4>Sparc-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16199">16199</a> ICE while compiling apache 2.0.49</li>
+<li><a href="http://gcc.gnu.org/PR16416">16416</a> <code>-m64</code> doesn't imply <code>-mcpu=v9</code> anymore</li>
+<li><a href="http://gcc.gnu.org/PR16430">16430</a> ICE when returning non-C aggregates larger than 16 bytes</li>
+</ul>
+<h4>Bugs specific to embedded processors</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16379">16379</a> [m32r] can't output large model function call of <code>memcpy</code></li>
+<li><a href="http://gcc.gnu.org/PR17093">17093</a> [m32r] ICE with <code>-msdata=use</code> <code>-O0</code></li>
+<li><a href="http://gcc.gnu.org/PR17119">17119</a> [m32r] ICE at switch case 0x8000</li>
+</ul>
+<h4>DJGPP-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR15928">15928</a> libstdc++ in 3.4.x doesn't cross-compile for djgpp</li>
+</ul>
+<h4>Alpha Tru64-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR16210">16210</a> libstdc++ gratuitously omits "<code>long long</code>" I/O</li>
+</ul>
+<h4>Testsuite, documentation issues (compiler is not affected):</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR15488">15488</a> (libstdc++) possibly insufficient file permissions for executing test suite</li>
+<li><a href="http://gcc.gnu.org/PR16250">16250</a> ada/doctools runs makeinfo even in release tarball</li>
 </ul>
 
 </body>
