Fix markup (even though some links are broken due to makeinfo's sillyness).

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -657,7 +657,7 @@ and not your code, that is broken.</em></p>
            (<code>@synchronized</code>) support.  These are accessible via
            the <code>-fobjc-exceptions</code> switch; as of this writing,
            they may only be used in conjunction with <code>-fnext-runtime
-           </code> on Mac OS X 10.3 and later. See <a href=""
+           </code> on Mac OS X 10.3 and later. See <a href=
            "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
@@ -670,14 +670,14 @@ and not your code, that is broken.</em></p>
            and that correct diagnostics are issued.</li>
        <li>Support for "Zero-Link" (<code>-fzero-link</code>) and
            "Fix-and-Continue" (<code>-freplace-objc-classes</code>) debugging
-           modes, currently available on Mac OS X 10.3 and later. See <a href=""
+           modes, currently available on Mac OS X 10.3 and later. See <a href=
            "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
        <li>Access to optimized runtime entry points (<code>-fno-nil-receivers
            </code>) on the assumption that message receivers are never <code>
            nil</code>.  This is currently available on Mac OS X 10.3 and
-           later. See <a href=""
+           later. See <a href=
            "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
