--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -41,7 +41,7 @@ to maintain and improve quality.</p>
 -->
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.4/">GCC 3.4.1</a> (released 2004-07-01)
+  <a href="gcc-3.4/">GCC 3.4.2</a> (released 2004-09-06)
 </dt><dd>
   Branch status:
   <a href="http://gcc.gnu.org/ml/gcc/2004-08/msg01117.html">2004-08-23</a>
@@ -87,6 +87,11 @@ to maintain and improve quality.</p>
 <h2><small>News/Announcements</small></h2>
 
 <dl>
+
+<dt><b>September 6, 2004</b></dt>
+<dd>
+<a href="gcc-3.4/">GCC 3.4.2</a> has been released.
+</dd>
 
 <dt><b>July 1, 2004</b></dt>
 <dd>
