2004-09-11  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: Gfortran is no longer on the tree-ssa branch,
	but on mainline.
	Direct those who cannot use CVS to the Snapshot page.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -49,13 +49,12 @@ We also keep a <a href="todo.html">TODO list</a>.</p>
 
 <h2>Contributing</h2>
 <p>We encourage everyone to <a href="../contribute.html">contribute changes</a>
-and help test gfortran.  Gfortran is developed on the so-called "tree-ssa"
-branch of GCC.
+and help test gfortran.  Gfortran is developed on the mainline of GCC, and will
+officially be released with the 4.0.0 release of the compiler collection.
 We provide read access to our development sources for everybody with
-<a href="../projects/tree-ssa/">anonymous CVS</a>.
-Daily snapshots of the branch are also <a
-href="http://people.redhat.com/dnovillo/pub/tree-ssa/snapshot/">
-available</a>.</p>
+<a href="../cvs.html">anonymous CVS</a>. If you do not have CVS access (for
+instance because you are behind a firewall prohibiting the CVS protocol),
+you might want to download <a href="../snapshots.html">snapshots</a>.</p>
 
 <h2>Binaries</h2>
 <p>The GNU project is about providing source code for its programs.
