--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -313,21 +313,21 @@ stages of development, branch points, and releases:</p>
        +-- GCC 3.4 branch created ------+
        |            (Jan 16 2004)        \ 
        |                                  v
-       |                                   GCC 3.4.0 release (April 18 2004)
-       |                                    \
-       v                                     v 
-  GCC 3.5 Stage 2 (ends September 2004)    GCC 3.4.1 release (July 1 2004)
+  Tree SSA infrastructure                  GCC 3.4.0 release (April 18 2004)
+  merged to mainline (May 17 2004)          \
+       |                                     v
+  GCC 4.0 stage 2                          GCC 3.4.1 release (July 1 2004)
        |                                      \
-       v                                       v
-  GCC 3.5 Stage 3                          GCC 3.4.2 release (Sep 6 2004) 
+       |                                       v
+  GCC 4.0 Stage 3                          GCC 3.4.2 release (Sep 6 2004)
        |                                        \
        |                                         v
        |                                   GCC 3.4.3 release (...)
        |
-       +-- GCC 3.5 branch --------------+
+       +-- GCC 4.0 branch --------------+
        |                                 \
        |                                  v
-       |                                   GCC 3.5.0 release (early 2005,
+       |                                   GCC 4.0.0 release (early 2005,
        |                                                      TENTATIVELY)
        |
        :
