--- a/htdocs/projects/h8300-abi.html
+++ b/htdocs/projects/h8300-abi.html
@@ -159,13 +159,13 @@ as follows:</p>
   <td>Address</td>
   <td>Description</td>
   <td>Size on H8/300</td>
-  <td>Size on H8/300H and H8S<br>(Normal Mode)</td>
-  <td>Size on H8/300H and H8S<br>(Advanced Mode)</td>
+  <td>Size on H8/300H and H8S<br />(Normal Mode)</td>
+  <td>Size on H8/300H and H8S<br />(Advanced Mode)</td>
   <td>Pointed to by</td>
 </tr>
 <tr>
   <td>High</td>
-  <td>Arguments<br>(if any)</td>
+  <td>Arguments<br />(if any)</td>
   <td>Multiple of 2 bytes</td>
   <td>Multiple of 4 bytes</td>
   <td>Multiple of 4 bytes</td>
@@ -201,7 +201,7 @@ as follows:</p>
   <td>Multiple of 2 bytes</td>
   <td>Multiple of 4 bytes</td>
   <td>Multiple of 4 bytes</td>
-  <td>R7 or ER7<br>(points to the lowest address)</td>
+  <td>R7 or ER7<br />(points to the lowest address)</td>
 </tr>
 </table>
 
@@ -228,13 +228,13 @@ follows:</p>
   <td>Address</td>
   <td>Description</td>
   <td>Size on H8/300</td>
-  <td>Size on H8/300H and H8S<br>(Normal Mode)</td>
-  <td>Size on H8/300H and H8S<br>(Advanced Mode)</td>
+  <td>Size on H8/300H and H8S<br />(Normal Mode)</td>
+  <td>Size on H8/300H and H8S<br />(Advanced Mode)</td>
   <td>Pointed to by</td>
 </tr>
 <tr>
   <td>High</td>
-  <td>Arguments<br>(if any)</td>
+  <td>Arguments<br />(if any)</td>
   <td>Multiple of 2 bytes</td>
   <td>Multiple of 4 bytes</td>
   <td>Multiple of 4 bytes</td>
@@ -250,7 +250,7 @@ follows:</p>
 </tr>
 <tr>
   <td>&nbsp;</td>
-  <td>Saved Frame Pointer<br>(if any)</td>
+  <td>Saved Frame Pointer<br />(if any)</td>
   <td>2 bytes</td>
   <td>4 bytes</td>
   <td>4 bytes</td>
@@ -270,7 +270,7 @@ follows:</p>
   <td>Multiple of 2 bytes</td>
   <td>Multiple of 4 bytes</td>
   <td>Multiple of 4 bytes</td>
-  <td>R7 or ER7<br>(points to the lowest address)</td>
+  <td>R7 or ER7<br />(points to the lowest address)</td>
 </tr>
 </table>
 
