--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -14,6 +14,41 @@ home page</a>.</p>
 
 <!-- ATTENTION: This page is for *OLD* news!  Latest news goes first. -->
 
+<dt><b>October 18, 2003</b></dt>
+<dd>
+Bernardo Innocenti of Develer S.r.l. has contributed the
+<a href="http://www.uclinux.org/pub/uClinux/uclinux-elf-tools/gcc-3/">
+m68k-uclinux target</a> and improved support for ColdFire cores, based
+on former work by Paul Dale (SnapGear, Inc.) and Peter Barada (Motorola, Inc.).
+</dd>
+
+<dt><b>October 17, 2003</b></dt>
+<dd>
+<a href="gcc-3.3/">GCC 3.3.2</a> has been released.
+</dd>
+
+<dt><b>August 27, 2003</b></dt>
+<dd>
+Nicolas Pitre has contributed his hand-coded floating-point support code
+for ARM.  It is both significantly smaller and faster than the 
+existing C-based implementation.  The arm-elf configuration uses the new 
+code now, and other ports will follow.
+</dd>
+
+<dt><b>August 8, 2003</b></dt>
+<dd>
+<a href="gcc-3.3/">GCC 3.3.1</a> has been released.
+</dd>
+
+<dt><b>June 26, 2003</b></dt>
+<dd>
+Ben Elliston of Wasabi Systems, Inc. has converted the existing ARM
+processor pipeline description to the new <a
+href="http://gcc.gnu.org/onlinedocs/gccint/Processor-pipeline-description.html">DFA
+pipeline description model</a>.
+It will be part of the GCC 3.4.0 release.
+</dd>
+
 <dt><b>May 27, 2003</b></dt>
 <dd>
 Proceedings and photographs of participants are available for the First
