--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -51,7 +51,7 @@ Key fingerprint = B215 C163 3BCA 0477 615F  1B35 A5B3 A004 745C 015A
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a></li>
 <li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/GNU/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>, thanks to ftpadm at ftp dot nctu dot edu dot tw</li>
-<li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to mirror at mirror dot ac dot uk</li>
+<li>UK: <a href="ftp://ftp.mirrorservice.org/sites/sources.redhat.com/pub/gcc/">ftp://ftp.mirrorservice.org/sites/sources.redhat.com/pub/gcc/</a>, thanks to mirror at mirrorservice dot org</li>
 <li>US (Virginia): <a href="ftp://mirrors.rcn.net/pub/sourceware/gcc/">mirrors.rcn.net</a> (also available via <a href="http://mirrors.rcn.net/pub/sourceware/gcc/">http</a>)</li>
 <li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/gcc.gnu.org/pub/gcc/">mirrors.laffeycomputer.com</a>, thanks to mirrormaster at laffey dot biz</li>
 </ul>
