Fix missing capitalization.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -1516,7 +1516,7 @@ here).</p>
 <li><a href="http://gcc.gnu.org/PR16195">16195</a> (ppc64): Miscompilation of GCC 3.3.x by 3.4.x</li>
 <li><a href="http://gcc.gnu.org/PR16239">16239</a> ICE on ppc64 (mozilla 1.7 compile, <code>-O1</code> <code>-fno-exceptions</code> issue)</li>
 </ul>
-<h4>Sparc-specific</h4>
+<h4>SPARC-specific</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR16199">16199</a> ICE while compiling apache 2.0.49</li>
 <li><a href="http://gcc.gnu.org/PR16416">16416</a> <code>-m64</code> doesn't imply <code>-mcpu=v9</code> anymore</li>
