--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -88,6 +88,12 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>September 9, 2004</b></dt>
+<dd>
+The next major version of GCC following the current 3.4 releas series
+will be called GCC 4.0.
+</dd>
+
 <dt><b>September 6, 2004</b></dt>
 <dd>
 <a href="gcc-3.4/">GCC 3.4.2</a> has been released.
