--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,7 +90,7 @@ to maintain and improve quality.</p>
 
 <dt><b>September 9, 2004</b></dt>
 <dd>
-The next major version of GCC following the current 3.4 releas series
+The next major version of GCC following the current 3.4 release series
 will be called GCC 4.0.
 </dd>
 
