* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,9 +4,9 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-09-13.</p>
+2004-09-14.</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
-This table intentionally omits certain classes which are not of
+<p>This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
 has been reintroduced.  <em>Note that such differences cannot be
@@ -78,8 +78,11 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.peer.MenuBarPeer</td> <td class="needsmerge"><a href="compare/java.awt.peer.MenuBarPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.AbstractButton</td> <td class="needsmerge"><a href="compare/javax.swing.AbstractButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.DebugGraphics</td> <td class="needsmerge"><a href="compare/javax.swing.DebugGraphics.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.DefaultButtonModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultButtonModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.InputVerifier</td> <td class="needsmerge"><a href="compare/javax.swing.InputVerifier.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JApplet</td> <td class="needsmerge"><a href="compare/javax.swing.JApplet.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JCheckBox</td> <td class="needsmerge"><a href="compare/javax.swing.JCheckBox.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JComponent</td> <td class="needsmerge"><a href="compare/javax.swing.JComponent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JDesktopPane</td> <td class="needsmerge"><a href="compare/javax.swing.JDesktopPane.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JFrame.diff">Diff</a></td> </tr>
@@ -94,6 +97,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.JTextArea</td> <td class="needsmerge"><a href="compare/javax.swing.JTextArea.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JTextField</td> <td class="needsmerge"><a href="compare/javax.swing.JTextField.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JToggleButton</td> <td class="needsmerge"><a href="compare/javax.swing.JToggleButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTree</td> <td class="needsmerge"><a href="compare/javax.swing.JTree.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.KeyStroke</td> <td class="needsmerge"><a href="compare/javax.swing.KeyStroke.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.swing.SpinnerListModel</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -118,12 +122,17 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.table.DefaultTableColumnModel</td> <td class="needsmerge"><a href="compare/javax.swing.table.DefaultTableColumnModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.DefaultTableModel</td> <td class="needsmerge"><a href="compare/javax.swing.table.DefaultTableModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.JTableHeader</td> <td class="needsmerge"><a href="compare/javax.swing.table.JTableHeader.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.table.TableColumn</td> <td class="needsmerge"><a href="compare/javax.swing.table.TableColumn.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.text.AbstractDocument</td> <td class="needsmerge"><a href="compare/javax.swing.text.AbstractDocument.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.text.AttributeSet</td> <td class="needsmerge"><a href="compare/javax.swing.text.AttributeSet.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.text.DefaultEditorKit</td> <td class="needsmerge"><a href="compare/javax.swing.text.DefaultEditorKit.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.DefaultHighlighter</td> <td class="needsmerge"><a href="compare/javax.swing.text.DefaultHighlighter.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.DocumentFilter</td> <td class="needsmerge"><a href="compare/javax.swing.text.DocumentFilter.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.text.JTextComponent</td> <td class="needsmerge"><a href="compare/javax.swing.text.JTextComponent.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.NavigationFilter</td> <td class="needsmerge"><a href="compare/javax.swing.text.NavigationFilter.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">javax.swing.text.PasswordView</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">javax.swing.text.PlainView</td> <td class="needsmerge"><a href="compare/javax.swing.text.PlainView.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.SimpleAttributeSet</td> <td class="needsmerge"><a href="compare/javax.swing.text.SimpleAttributeSet.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.text.html.HTML</td> <td class="needsmerge"><a href="compare/javax.swing.text.html.HTML.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGlyphVector.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGlyphVector.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGraphics.c.diff">Diff</a></td> </tr>
