--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,9 +4,9 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-09-13.</p>
+2004-09-14.</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
-This table intentionally omits certain classes which are not of
+<p>This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
 has been reintroduced.  <em>Note that such differences cannot be
