* Added MIPS section.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -143,6 +143,16 @@
         on some codes.</li>
   </ul>
 
+<h3>MIPS</h3>
+  <ul>
+    <li>Division by zero checks now use conditional traps on platforms
+        where it is supported.  This decreases code size by one word per
+        division operation.  The old behavior (branch and break) can
+        be obtained either at configure time by passing
+        <code>--with-divide=breaks</code> to <code>configure</code> or at
+        runtime by passing <code>-mdivide-breaks</code> to GCC.</li>
+  </ul>
+
 <h3>NetWare</h3>
   <ul>
     <li>Novell NetWare (on ix86, no other hardware platform was ever
