--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -18,6 +18,12 @@
 <ul>
   <li>GCC 3.4.1 manuals:
   <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gcc/">GCC
+         3.4.2 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gcc.ps.gz">also
+         in PostScript</a> or <a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gcc-html.tar.gz">an
+         HTML tarball</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gcc/">GCC
          3.4.1 Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gcc.ps.gz">also
