--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -16,7 +16,7 @@
      versions.  -->
 
 <ul>
-  <li>GCC 3.4.1 manuals:
+  <li>GCC 3.4.2 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gcc/">GCC
          3.4.2 Manual</a> (<a
@@ -24,6 +24,48 @@
          in PostScript</a> or <a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gcc-html.tar.gz">an
          HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/g77/">GCC
+         3.4.2 G77 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/g77.ps.gz">also
+         in PostScript</a> or <a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/g77-html.tar.gz">an
+         HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gcj/">GCC
+         3.4.2 GCJ Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gcj.ps.gz">also
+         in PostScript</a> or <a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gcj-html.tar.gz">an
+         HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/cpp/">GCC 
+         3.4.2 CPP Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/cpp.ps.gz">also
+         in PostScript</a> or <a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/cpp-html.tar.gz">an
+         HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gnat_rm/">GCC
+         3.4.2 GNAT Reference Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gnat_rm.ps.gz">also
+         in PostScript</a> or <a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gnat_rm-html.tar.gz">an
+         HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gnat_ugn_unw/">GCC
+         3.4.2 GNAT User's Guide</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gnat_ugn_unw.ps.gz">also
+         in PostScript</a> or <a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/gnat_ugn_unw-html.tar.gz">an
+         HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/fastjar/">GCC
+         3.4.2 GNU JAR Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/fastjar.ps.gz">also
+         in PostScript</a> or <a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/fastjar-html.tar.gz">an
+         HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.2/docs-sources.tar.gz">Texinfo
+         sources of all the GCC 3.4.2 manuals</a></li>
+  </ul></li>
+
+  <li>GCC 3.4.1 manuals:
+  <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gcc/">GCC
          3.4.1 Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gcc.ps.gz">also
