--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -80,7 +80,7 @@ names.
  </li>
 
  <li>arm (armv2, thumb)
-  <br />Manufacturer: Various, by licence from ARM
+  <br />Manufacturer: Various, by license from ARM
   <br />CPUs include: ARM7 and ARM7T series (eg. ARM7TDMI), ARM9 and StrongARM
   <br /><a href="http://www.arm.com/documentation/">ARM Documentation</a>
  </li>
