--- a/htdocs/projects/h8300-abi.html
+++ b/htdocs/projects/h8300-abi.html
@@ -87,7 +87,7 @@ used to return the function value, R0 contains the upper half and R1
 contains the lower half of the value.</p>
 
 <p>On H8/300H and H8S, the scalar function value no larger than 8
-bytes in size is returned in R0 or a pair of R0 and R1.</p>
+bytes in size is returned in ER0 or a pair of ER0 and ER1.</p>
 
 <p>Otherwise, the function value is always returned in memory.
 Specifically, the caller allocates an instance of the aggregate type
