2004-09-17  Toon Moene  <toon@moene.indiv.nluug.nl>
	* gcc-4.0/changes.html: Mention the discontinuing of options
	-freduce-all-givs and -fmove-all-movables.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -30,6 +30,12 @@
     <li>GCC no longer accepts the <code>-fwritable-strings</code>
         option.  Use named character arrays when you need a writable
         string.</li>
+    <li>The options <code>-freduce-all-givs</code> and
+        <code>-fmove-all-movables</code> have been discontinued.  They
+        were used to circumvent a shortcoming in the heuristics of the
+        old loop optimization code with respect to common Fortran constructs.
+        The new (tree) loop optimizer works differently and doesn't need those
+        work-arounds.</li>
     <li><code>-I-</code> has been deprecated.  <code>-iquote</code> is meant
     to replace the need for this option.</li>
   </ul>
