* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-09-14.</p>
+2004-09-18.</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -68,6 +68,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.geom.Point2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Point2D.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.QuadCurve2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.QuadCurve2D.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.Rectangle2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Rectangle2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.ColorModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ColorModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBuffer</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBufferByte</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferByte.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBufferDouble</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferDouble.diff">Diff</a></td> </tr>
@@ -76,6 +77,8 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.image.DataBufferShort</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferShort.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBufferUShort</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferUShort.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.Raster</td> <td class="needsmerge"><a href="compare/java.awt.image.Raster.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.SinglePixelPackedSampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.SinglePixelPackedSampleModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.peer.MenuBarPeer</td> <td class="needsmerge"><a href="compare/java.awt.peer.MenuBarPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.AbstractButton</td> <td class="needsmerge"><a href="compare/javax.swing.AbstractButton.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.DebugGraphics</td> <td class="needsmerge"><a href="compare/javax.swing.DebugGraphics.diff">Diff</a></td> </tr>
@@ -110,6 +113,8 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.colorchooser.DefaultRGBChooserPanel</td> <td class="needsmerge"><a href="compare/javax.swing.colorchooser.DefaultRGBChooserPanel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicArrowButton</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicArrowButton.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonListener</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonListener.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicComboBoxUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicComboBoxUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicComboPopup</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicComboPopup.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicPasswordFieldUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicPasswordFieldUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollBarUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSplitPaneDivider</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSplitPaneDivider.diff">Diff</a></td> </tr>
