Add an Announcing Changes (to our Users) section.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -24,6 +24,7 @@ contributions must meet:</p>
 <li><a href="#docchanges">Documentation Changes</a></li>
 <li><a href="#webchanges">Web Site Changes</a></li>
 <li><a href="#patches">Submitting Patches</a></li>
+<li><a href="#announce">Announcing Changes (to our Users)</a></li>
 </ul>
 
 <hr />
@@ -277,6 +278,20 @@ that ChangeLog entries may be included as part of the patch since
 no-one else will need to apply it to the tree later and diffs representing
 totally new files may be omitted (especially if large) since they can be
 accessed directly from the repository.</p>
+
+
+<h2><a name="announce">Announcing Changes (to our Users)</a></h2>
+
+<p>Everything that requires a user to edit his Makefiles or his source code
+is a good candidate for being mentioned in the release notes.</p>
+
+<p>Larger accomplishments, either as part of a specific project, or long
+term committment, merit mention on the front page.  Examples include projects
+like tree-ssa, new backends, major advances in optimization or standards
+compliance.</p>
+
+<p>The gcc-announce mailing list serves to announce new releases and changes
+like frontends or backends being dropped.</p>
 
 </body>
 </html>
