--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-09-18.</p>
+2004-09-20.</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -54,6 +54,7 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">java.io.VMObjectStreamClass</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.Character</td> <td class="needsmerge"><a href="compare/java.lang.Character.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Class</td> <td class="needsmerge"><a href="compare/java.lang.Class.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.lang.ClassLoader</td> <td class="needsmerge"><a href="compare/java.lang.ClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Compiler</td> <td class="needsmerge"><a href="compare/java.lang.Compiler.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Double</td> <td class="needsmerge"><a href="compare/java.lang.Double.diff">Diff</a></td> </tr>
 <tr> <td class="GCJ-specific">java.lang.EcosProcess</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
@@ -105,9 +106,11 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.security.cert.X509CertSelector</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Collections</td> <td class="needsmerge"><a href="compare/java.util.Collections.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.PropertyPermissionCollection</td> <td class="needsmerge"><a href="compare/java.util.PropertyPermissionCollection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.TimeZone</td> <td class="needsmerge"><a href="compare/java.util.TimeZone.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.TreeMap</td> <td class="needsmerge"><a href="compare/java.util.TreeMap.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
